--- a/notebooks/Gillian's_notebook_imagenet.ipynb
+++ b/notebooks/Gillian's_notebook_imagenet.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 23,
       "id": "9c5ddd1b",
       "metadata": {
         "id": "9c5ddd1b"
@@ -28,30 +28,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s6kPd0KleSUo",
-        "outputId": "86286fbd-c5fe-427c-eaa3-c5c3e346efef"
+        "outputId": "c276fe1f-751e-4329-f96d-fd45f2909d24"
       },
       "id": "s6kPd0KleSUo",
-      "execution_count": 3,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
         "id": "ljHg5zt1eIx8",
-        "outputId": "adfed875-b21a-41aa-fb46-8b2fcf2ac62f"
+        "outputId": "24a551ca-5123-4ab7-8148-27b9a6efd22c"
       },
       "outputs": [
         {
@@ -67,7 +67,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2dd54150-dbf5-47f5-9ea9-0fd21b1a672c\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-483ab4b2-dfed-4043-9a9b-49f00fa76371\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -122,7 +122,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2dd54150-dbf5-47f5-9ea9-0fd21b1a672c')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-483ab4b2-dfed-4043-9a9b-49f00fa76371')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -174,12 +174,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-2dd54150-dbf5-47f5-9ea9-0fd21b1a672c button.colab-df-convert');\n",
+              "        document.querySelector('#df-483ab4b2-dfed-4043-9a9b-49f00fa76371 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-2dd54150-dbf5-47f5-9ea9-0fd21b1a672c');\n",
+              "        const element = document.querySelector('#df-483ab4b2-dfed-4043-9a9b-49f00fa76371');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -199,8 +199,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-18c161ae-07bb-49ad-b177-608d20c1eddf\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-18c161ae-07bb-49ad-b177-608d20c1eddf')\"\n",
+              "<div id=\"df-e77c5a2a-9ee5-4d51-8d04-7756811d30a8\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e77c5a2a-9ee5-4d51-8d04-7756811d30a8')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -319,7 +319,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-18c161ae-07bb-49ad-b177-608d20c1eddf button');\n",
+              "        document.querySelector('#df-e77c5a2a-9ee5-4d51-8d04-7756811d30a8 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -330,7 +330,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 25
         }
       ],
       "source": [
@@ -364,13 +364,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6SYVaamZeIx-",
-        "outputId": "4099a4ef-72b6-4549-cbcf-0d5a8c332ff6"
+        "outputId": "82e37f9c-2998-43f9-8eba-75413ab66bdc"
       },
       "outputs": [
         {
@@ -381,7 +381,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 26
         }
       ],
       "source": [
@@ -425,7 +425,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 27,
       "metadata": {
         "id": "7VYOQ_3TeIx_"
       },
@@ -440,7 +440,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 28,
       "metadata": {
         "id": "fzwAobMIeIx_"
       },
@@ -452,6 +452,46 @@
         "from tensorflow.keras.layers.experimental.preprocessing import Rescaling\n"
       ],
       "id": "fzwAobMIeIx_"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from keras.preprocessing.image import ImageDataGenerator\n",
+        "\n",
+        "train_datagen = ImageDataGenerator(\n",
+        "    rescale = 1./255,\n",
+        "    featurewise_center = False,\n",
+        "    featurewise_std_normalization = False,\n",
+        "    rotation_range = 20,\n",
+        "    width_shift_range = 0.2,\n",
+        "    height_shift_range = 0.2,\n",
+        "    horizontal_flip = True,\n",
+        "    zoom_range = (0.8, 1.2),\n",
+        "    shear_range=0.15,\n",
+        "    )\n",
+        "\n",
+        "test_datagen = ImageDataGenerator(\n",
+        "    rescale = 1./255)\n"
+      ],
+      "metadata": {
+        "id": "9smhwMbZlkVL"
+      },
+      "id": "9smhwMbZlkVL",
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_flow = train_datagen.flow(X_train, y_train, batch_size = 16)\n",
+        "valid_flow = test_datagen.flow(X_test, y_test, batch_size = 1)"
+      ],
+      "metadata": {
+        "id": "IZsVut98lrtn"
+      },
+      "id": "IZsVut98lrtn",
+      "execution_count": 32,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -486,46 +526,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
-        "id": "lg6_0N9NeIyB",
-        "outputId": "85932fc5-93b7-4d38-9b7e-d7a9a4fb5766"
+        "id": "lg6_0N9NeIyB"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Model: \"sequential_10\"\n",
-            "_________________________________________________________________\n",
-            " Layer (type)                Output Shape              Param #   \n",
-            "=================================================================\n",
-            " rescaling_10 (Rescaling)    (None, 224, 224, 3)       0         \n",
-            "                                                                 \n",
-            " conv2d_20 (Conv2D)          (None, 215, 215, 16)      4816      \n",
-            "                                                                 \n",
-            " max_pooling2d_20 (MaxPoolin  (None, 71, 71, 16)       0         \n",
-            " g2D)                                                            \n",
-            "                                                                 \n",
-            " conv2d_21 (Conv2D)          (None, 66, 66, 32)        18464     \n",
-            "                                                                 \n",
-            " max_pooling2d_21 (MaxPoolin  (None, 22, 22, 32)       0         \n",
-            " g2D)                                                            \n",
-            "                                                                 \n",
-            " flatten_10 (Flatten)        (None, 15488)             0         \n",
-            "                                                                 \n",
-            " dropout_5 (Dropout)         (None, 15488)             0         \n",
-            "                                                                 \n",
-            " dense_14 (Dense)            (None, 38)                588582    \n",
-            "                                                                 \n",
-            "=================================================================\n",
-            "Total params: 611,862\n",
-            "Trainable params: 611,862\n",
-            "Non-trainable params: 0\n",
-            "_________________________________________________________________\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# model_homemade = load_baseline_model()\n",
         "# model_homemade.summary()\n"
@@ -534,7 +539,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 33,
       "metadata": {
         "id": "Qvorn_WieIyB"
       },
@@ -560,7 +565,7 @@
         "id": "AHBucCTAgcbN"
       },
       "id": "AHBucCTAgcbN",
-      "execution_count": 17,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -571,64 +576,81 @@
         "                   verbose = 1,\n",
         "                   restore_best_weights = True)\n",
         "\n",
-        "history = model_xception.fit(X_train, y_train,\n",
-        "                             validation_data=(X_test, y_test),\n",
+        "history = model_xception.fit(train_flow,\n",
+        "                             validation_data=(valid_flow),\n",
         "                             batch_size = 16,\n",
         "                             epochs = 100,\n",
-        "                             callbacks=[es])"
+        "                             callbacks=[es])\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "tASV8dzOgetF",
-        "outputId": "bdfb41ae-83fd-4d39-ac3c-a418bc834b03"
+        "outputId": "7c49fc5e-9868-4bc3-b7c2-bdfcf5cdc4a4"
       },
       "id": "tASV8dzOgetF",
-      "execution_count": 18,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/100\n",
-            "24/24 [==============================] - 36s 646ms/step - loss: 6.2977 - accuracy: 0.0458 - val_loss: 5.4766 - val_accuracy: 0.0253\n",
+            "24/24 [==============================] - 46s 675ms/step - loss: 6.2661 - accuracy: 0.0243 - val_loss: 4.7234 - val_accuracy: 0.0253\n",
             "Epoch 2/100\n",
-            "24/24 [==============================] - 11s 455ms/step - loss: 3.0118 - accuracy: 0.4852 - val_loss: 3.6213 - val_accuracy: 0.1392\n",
+            "24/24 [==============================] - 15s 609ms/step - loss: 3.7513 - accuracy: 0.3261 - val_loss: 3.0527 - val_accuracy: 0.2785\n",
             "Epoch 3/100\n",
-            "24/24 [==============================] - 11s 464ms/step - loss: 0.8259 - accuracy: 0.9111 - val_loss: 2.5922 - val_accuracy: 0.3418\n",
+            "24/24 [==============================] - 14s 574ms/step - loss: 1.7570 - accuracy: 0.6604 - val_loss: 2.1165 - val_accuracy: 0.5190\n",
             "Epoch 4/100\n",
-            "24/24 [==============================] - 12s 483ms/step - loss: 0.1235 - accuracy: 0.9973 - val_loss: 1.8928 - val_accuracy: 0.5316\n",
+            "24/24 [==============================] - 14s 593ms/step - loss: 0.5984 - accuracy: 0.9111 - val_loss: 1.2430 - val_accuracy: 0.7722\n",
             "Epoch 5/100\n",
-            "24/24 [==============================] - 12s 486ms/step - loss: 0.0460 - accuracy: 1.0000 - val_loss: 1.5196 - val_accuracy: 0.6203\n",
+            "24/24 [==============================] - 15s 598ms/step - loss: 0.1938 - accuracy: 0.9892 - val_loss: 1.0189 - val_accuracy: 0.7722\n",
             "Epoch 6/100\n",
-            "24/24 [==============================] - 11s 475ms/step - loss: 0.0297 - accuracy: 1.0000 - val_loss: 1.3689 - val_accuracy: 0.6582\n",
+            "24/24 [==============================] - 15s 617ms/step - loss: 0.0834 - accuracy: 0.9973 - val_loss: 0.8074 - val_accuracy: 0.8228\n",
             "Epoch 7/100\n",
-            "24/24 [==============================] - 11s 469ms/step - loss: 0.0197 - accuracy: 1.0000 - val_loss: 1.2543 - val_accuracy: 0.7595\n",
+            "24/24 [==============================] - 15s 609ms/step - loss: 0.0699 - accuracy: 0.9973 - val_loss: 0.7342 - val_accuracy: 0.8608\n",
             "Epoch 8/100\n",
-            "24/24 [==============================] - 11s 464ms/step - loss: 0.0137 - accuracy: 1.0000 - val_loss: 1.2001 - val_accuracy: 0.7722\n",
+            "24/24 [==============================] - 14s 583ms/step - loss: 0.0392 - accuracy: 1.0000 - val_loss: 0.5773 - val_accuracy: 0.8861\n",
             "Epoch 9/100\n",
-            "24/24 [==============================] - 11s 460ms/step - loss: 0.0208 - accuracy: 1.0000 - val_loss: 1.1663 - val_accuracy: 0.7722\n",
+            "24/24 [==============================] - 14s 591ms/step - loss: 0.0482 - accuracy: 0.9946 - val_loss: 0.7557 - val_accuracy: 0.8354\n",
             "Epoch 10/100\n",
-            "24/24 [==============================] - 11s 462ms/step - loss: 0.0116 - accuracy: 1.0000 - val_loss: 1.4237 - val_accuracy: 0.6709\n",
+            "24/24 [==============================] - 15s 602ms/step - loss: 0.0402 - accuracy: 0.9973 - val_loss: 0.7040 - val_accuracy: 0.8228\n",
             "Epoch 11/100\n",
-            "24/24 [==============================] - 11s 464ms/step - loss: 0.0159 - accuracy: 1.0000 - val_loss: 1.3451 - val_accuracy: 0.6456\n",
+            "24/24 [==============================] - 15s 608ms/step - loss: 0.0278 - accuracy: 0.9973 - val_loss: 0.6010 - val_accuracy: 0.8734\n",
             "Epoch 12/100\n",
-            "24/24 [==============================] - 11s 469ms/step - loss: 0.0120 - accuracy: 1.0000 - val_loss: 1.5637 - val_accuracy: 0.6582\n",
+            "24/24 [==============================] - 15s 601ms/step - loss: 0.0276 - accuracy: 0.9946 - val_loss: 0.6813 - val_accuracy: 0.8734\n",
             "Epoch 13/100\n",
-            "24/24 [==============================] - 11s 469ms/step - loss: 0.0090 - accuracy: 1.0000 - val_loss: 1.3559 - val_accuracy: 0.7215\n",
+            "24/24 [==============================] - 13s 549ms/step - loss: 0.0397 - accuracy: 0.9946 - val_loss: 0.6103 - val_accuracy: 0.8354\n",
             "Epoch 14/100\n",
-            "24/24 [==============================] - 11s 465ms/step - loss: 0.0077 - accuracy: 1.0000 - val_loss: 1.2864 - val_accuracy: 0.7215\n",
+            "24/24 [==============================] - 14s 562ms/step - loss: 0.0182 - accuracy: 1.0000 - val_loss: 0.5633 - val_accuracy: 0.8354\n",
             "Epoch 15/100\n",
-            "24/24 [==============================] - 11s 463ms/step - loss: 0.0058 - accuracy: 1.0000 - val_loss: 1.2147 - val_accuracy: 0.7342\n",
+            "24/24 [==============================] - 15s 602ms/step - loss: 0.0137 - accuracy: 1.0000 - val_loss: 0.4552 - val_accuracy: 0.8481\n",
             "Epoch 16/100\n",
-            "24/24 [==============================] - 11s 461ms/step - loss: 0.0053 - accuracy: 1.0000 - val_loss: 1.1793 - val_accuracy: 0.7468\n",
+            "24/24 [==============================] - 13s 530ms/step - loss: 0.0139 - accuracy: 1.0000 - val_loss: 0.4240 - val_accuracy: 0.8987\n",
             "Epoch 17/100\n",
-            "24/24 [==============================] - 11s 462ms/step - loss: 0.0073 - accuracy: 1.0000 - val_loss: 1.1438 - val_accuracy: 0.7468\n",
+            "24/24 [==============================] - 14s 579ms/step - loss: 0.0232 - accuracy: 0.9946 - val_loss: 0.4427 - val_accuracy: 0.8861\n",
             "Epoch 18/100\n",
-            "24/24 [==============================] - ETA: 0s - loss: 0.0072 - accuracy: 1.0000Restoring model weights from the end of the best epoch: 8.\n",
-            "24/24 [==============================] - 11s 469ms/step - loss: 0.0072 - accuracy: 1.0000 - val_loss: 1.1730 - val_accuracy: 0.7342\n",
-            "Epoch 18: early stopping\n"
+            "24/24 [==============================] - 15s 626ms/step - loss: 0.0193 - accuracy: 1.0000 - val_loss: 0.5774 - val_accuracy: 0.8734\n",
+            "Epoch 19/100\n",
+            "24/24 [==============================] - 15s 611ms/step - loss: 0.0174 - accuracy: 1.0000 - val_loss: 0.5244 - val_accuracy: 0.8861\n",
+            "Epoch 20/100\n",
+            "24/24 [==============================] - 15s 600ms/step - loss: 0.0132 - accuracy: 1.0000 - val_loss: 0.4376 - val_accuracy: 0.8734\n",
+            "Epoch 21/100\n",
+            "24/24 [==============================] - 15s 603ms/step - loss: 0.0132 - accuracy: 1.0000 - val_loss: 0.4550 - val_accuracy: 0.8734\n",
+            "Epoch 22/100\n",
+            "24/24 [==============================] - 14s 582ms/step - loss: 0.0108 - accuracy: 1.0000 - val_loss: 0.6368 - val_accuracy: 0.8608\n",
+            "Epoch 23/100\n",
+            "24/24 [==============================] - 15s 613ms/step - loss: 0.0102 - accuracy: 1.0000 - val_loss: 0.4844 - val_accuracy: 0.8354\n",
+            "Epoch 24/100\n",
+            "24/24 [==============================] - 15s 605ms/step - loss: 0.0071 - accuracy: 1.0000 - val_loss: 0.4761 - val_accuracy: 0.8861\n",
+            "Epoch 25/100\n",
+            "24/24 [==============================] - 14s 584ms/step - loss: 0.0057 - accuracy: 1.0000 - val_loss: 0.4912 - val_accuracy: 0.8987\n",
+            "Epoch 26/100\n",
+            "24/24 [==============================] - ETA: 0s - loss: 0.0039 - accuracy: 1.0000Restoring model weights from the end of the best epoch: 16.\n",
+            "24/24 [==============================] - 13s 534ms/step - loss: 0.0039 - accuracy: 1.0000 - val_loss: 0.4768 - val_accuracy: 0.8987\n",
+            "Epoch 26: early stopping\n"
           ]
         }
       ]
@@ -750,17 +772,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Nx1UW2iXiYtx",
-        "outputId": "69db3079-584d-491f-ff7a-c152505a39ef"
+        "outputId": "b0841e4e-d8da-43a0-b40c-1fba96685f21"
       },
       "id": "Nx1UW2iXiYtx",
-      "execution_count": 20,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "3/3 [==============================] - 4s 188ms/step - loss: 1.2001 - accuracy: 0.7722\n",
-            "xception test_accuracy = 77.2 %\n"
+            "3/3 [==============================] - 2s 172ms/step - loss: 4989.6494 - accuracy: 0.0380\n",
+            "xception test_accuracy = 3.8 %\n"
           ]
         }
       ]
