Adds fill_mode and brightness_range to data augmentation as proposed by copilot giving accuracy of 7.6 pc

--- a/notebooks/Gillian's_notebook_imagenet.ipynb
+++ b/notebooks/Gillian's_notebook_imagenet.ipynb
@@ -468,6 +468,8 @@
         "    horizontal_flip = True,\n",
         "    zoom_range = (0.8, 1.2),\n",
         "    shear_range=0.15,\n",
+        "    fill_mode='constant',  # new\n",
+        "    brightness_range=[0.8, 1.2],  # new\n",
         "    )\n",
         "\n",
         "test_datagen = ImageDataGenerator(\n",
@@ -477,7 +479,7 @@
         "id": "9smhwMbZlkVL"
       },
       "id": "9smhwMbZlkVL",
-      "execution_count": 31,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -490,7 +492,7 @@
         "id": "IZsVut98lrtn"
       },
       "id": "IZsVut98lrtn",
-      "execution_count": 32,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -539,7 +541,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 40,
       "metadata": {
         "id": "Qvorn_WieIyB"
       },
@@ -565,7 +567,7 @@
         "id": "AHBucCTAgcbN"
       },
       "id": "AHBucCTAgcbN",
-      "execution_count": 34,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -588,69 +590,71 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tASV8dzOgetF",
-        "outputId": "7c49fc5e-9868-4bc3-b7c2-bdfcf5cdc4a4"
+        "outputId": "a665cc6c-4cab-465b-be59-cf3c4f5985ed"
       },
       "id": "tASV8dzOgetF",
-      "execution_count": 35,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/100\n",
-            "24/24 [==============================] - 46s 675ms/step - loss: 6.2661 - accuracy: 0.0243 - val_loss: 4.7234 - val_accuracy: 0.0253\n",
+            "24/24 [==============================] - 36s 620ms/step - loss: 6.1699 - accuracy: 0.0404 - val_loss: 4.4226 - val_accuracy: 0.0633\n",
             "Epoch 2/100\n",
-            "24/24 [==============================] - 15s 609ms/step - loss: 3.7513 - accuracy: 0.3261 - val_loss: 3.0527 - val_accuracy: 0.2785\n",
+            "24/24 [==============================] - 14s 618ms/step - loss: 3.2942 - accuracy: 0.3504 - val_loss: 2.9638 - val_accuracy: 0.2658\n",
             "Epoch 3/100\n",
-            "24/24 [==============================] - 14s 574ms/step - loss: 1.7570 - accuracy: 0.6604 - val_loss: 2.1165 - val_accuracy: 0.5190\n",
+            "24/24 [==============================] - 13s 553ms/step - loss: 1.3634 - accuracy: 0.7574 - val_loss: 2.0524 - val_accuracy: 0.5696\n",
             "Epoch 4/100\n",
-            "24/24 [==============================] - 14s 593ms/step - loss: 0.5984 - accuracy: 0.9111 - val_loss: 1.2430 - val_accuracy: 0.7722\n",
+            "24/24 [==============================] - 14s 589ms/step - loss: 0.3963 - accuracy: 0.9380 - val_loss: 1.4127 - val_accuracy: 0.6582\n",
             "Epoch 5/100\n",
-            "24/24 [==============================] - 15s 598ms/step - loss: 0.1938 - accuracy: 0.9892 - val_loss: 1.0189 - val_accuracy: 0.7722\n",
+            "24/24 [==============================] - 14s 593ms/step - loss: 0.1337 - accuracy: 0.9946 - val_loss: 0.9951 - val_accuracy: 0.7975\n",
             "Epoch 6/100\n",
-            "24/24 [==============================] - 15s 617ms/step - loss: 0.0834 - accuracy: 0.9973 - val_loss: 0.8074 - val_accuracy: 0.8228\n",
+            "24/24 [==============================] - 15s 599ms/step - loss: 0.0718 - accuracy: 0.9946 - val_loss: 0.8555 - val_accuracy: 0.8101\n",
             "Epoch 7/100\n",
-            "24/24 [==============================] - 15s 609ms/step - loss: 0.0699 - accuracy: 0.9973 - val_loss: 0.7342 - val_accuracy: 0.8608\n",
+            "24/24 [==============================] - 14s 595ms/step - loss: 0.0674 - accuracy: 0.9919 - val_loss: 0.8018 - val_accuracy: 0.7975\n",
             "Epoch 8/100\n",
-            "24/24 [==============================] - 14s 583ms/step - loss: 0.0392 - accuracy: 1.0000 - val_loss: 0.5773 - val_accuracy: 0.8861\n",
+            "24/24 [==============================] - 14s 566ms/step - loss: 0.0443 - accuracy: 1.0000 - val_loss: 0.7597 - val_accuracy: 0.8101\n",
             "Epoch 9/100\n",
-            "24/24 [==============================] - 14s 591ms/step - loss: 0.0482 - accuracy: 0.9946 - val_loss: 0.7557 - val_accuracy: 0.8354\n",
+            "24/24 [==============================] - 13s 527ms/step - loss: 0.0324 - accuracy: 1.0000 - val_loss: 0.6823 - val_accuracy: 0.8481\n",
             "Epoch 10/100\n",
-            "24/24 [==============================] - 15s 602ms/step - loss: 0.0402 - accuracy: 0.9973 - val_loss: 0.7040 - val_accuracy: 0.8228\n",
+            "24/24 [==============================] - 14s 579ms/step - loss: 0.0317 - accuracy: 1.0000 - val_loss: 0.6448 - val_accuracy: 0.8481\n",
             "Epoch 11/100\n",
-            "24/24 [==============================] - 15s 608ms/step - loss: 0.0278 - accuracy: 0.9973 - val_loss: 0.6010 - val_accuracy: 0.8734\n",
+            "24/24 [==============================] - 15s 607ms/step - loss: 0.0439 - accuracy: 1.0000 - val_loss: 0.6404 - val_accuracy: 0.8481\n",
             "Epoch 12/100\n",
-            "24/24 [==============================] - 15s 601ms/step - loss: 0.0276 - accuracy: 0.9946 - val_loss: 0.6813 - val_accuracy: 0.8734\n",
+            "24/24 [==============================] - 14s 563ms/step - loss: 0.0284 - accuracy: 1.0000 - val_loss: 0.6768 - val_accuracy: 0.8481\n",
             "Epoch 13/100\n",
-            "24/24 [==============================] - 13s 549ms/step - loss: 0.0397 - accuracy: 0.9946 - val_loss: 0.6103 - val_accuracy: 0.8354\n",
+            "24/24 [==============================] - 14s 550ms/step - loss: 0.0325 - accuracy: 0.9973 - val_loss: 0.6612 - val_accuracy: 0.8481\n",
             "Epoch 14/100\n",
-            "24/24 [==============================] - 14s 562ms/step - loss: 0.0182 - accuracy: 1.0000 - val_loss: 0.5633 - val_accuracy: 0.8354\n",
+            "24/24 [==============================] - 15s 617ms/step - loss: 0.0186 - accuracy: 1.0000 - val_loss: 0.6435 - val_accuracy: 0.8354\n",
             "Epoch 15/100\n",
-            "24/24 [==============================] - 15s 602ms/step - loss: 0.0137 - accuracy: 1.0000 - val_loss: 0.4552 - val_accuracy: 0.8481\n",
+            "24/24 [==============================] - 15s 601ms/step - loss: 0.0184 - accuracy: 1.0000 - val_loss: 0.5914 - val_accuracy: 0.8481\n",
             "Epoch 16/100\n",
-            "24/24 [==============================] - 13s 530ms/step - loss: 0.0139 - accuracy: 1.0000 - val_loss: 0.4240 - val_accuracy: 0.8987\n",
+            "24/24 [==============================] - 15s 610ms/step - loss: 0.0364 - accuracy: 0.9973 - val_loss: 0.4704 - val_accuracy: 0.8987\n",
             "Epoch 17/100\n",
-            "24/24 [==============================] - 14s 579ms/step - loss: 0.0232 - accuracy: 0.9946 - val_loss: 0.4427 - val_accuracy: 0.8861\n",
+            "24/24 [==============================] - 14s 588ms/step - loss: 0.0208 - accuracy: 1.0000 - val_loss: 0.3546 - val_accuracy: 0.9367\n",
             "Epoch 18/100\n",
-            "24/24 [==============================] - 15s 626ms/step - loss: 0.0193 - accuracy: 1.0000 - val_loss: 0.5774 - val_accuracy: 0.8734\n",
+            "24/24 [==============================] - 15s 616ms/step - loss: 0.0170 - accuracy: 1.0000 - val_loss: 0.4303 - val_accuracy: 0.9114\n",
             "Epoch 19/100\n",
-            "24/24 [==============================] - 15s 611ms/step - loss: 0.0174 - accuracy: 1.0000 - val_loss: 0.5244 - val_accuracy: 0.8861\n",
+            "24/24 [==============================] - 14s 594ms/step - loss: 0.0171 - accuracy: 0.9973 - val_loss: 0.6123 - val_accuracy: 0.8608\n",
             "Epoch 20/100\n",
-            "24/24 [==============================] - 15s 600ms/step - loss: 0.0132 - accuracy: 1.0000 - val_loss: 0.4376 - val_accuracy: 0.8734\n",
+            "24/24 [==============================] - 14s 572ms/step - loss: 0.0105 - accuracy: 1.0000 - val_loss: 0.6064 - val_accuracy: 0.8608\n",
             "Epoch 21/100\n",
-            "24/24 [==============================] - 15s 603ms/step - loss: 0.0132 - accuracy: 1.0000 - val_loss: 0.4550 - val_accuracy: 0.8734\n",
+            "24/24 [==============================] - 14s 559ms/step - loss: 0.0232 - accuracy: 0.9946 - val_loss: 0.5036 - val_accuracy: 0.8481\n",
             "Epoch 22/100\n",
-            "24/24 [==============================] - 14s 582ms/step - loss: 0.0108 - accuracy: 1.0000 - val_loss: 0.6368 - val_accuracy: 0.8608\n",
+            "24/24 [==============================] - 15s 624ms/step - loss: 0.0235 - accuracy: 0.9973 - val_loss: 0.4526 - val_accuracy: 0.8861\n",
             "Epoch 23/100\n",
-            "24/24 [==============================] - 15s 613ms/step - loss: 0.0102 - accuracy: 1.0000 - val_loss: 0.4844 - val_accuracy: 0.8354\n",
+            "24/24 [==============================] - 15s 606ms/step - loss: 0.0135 - accuracy: 1.0000 - val_loss: 0.3890 - val_accuracy: 0.8987\n",
             "Epoch 24/100\n",
-            "24/24 [==============================] - 15s 605ms/step - loss: 0.0071 - accuracy: 1.0000 - val_loss: 0.4761 - val_accuracy: 0.8861\n",
+            "24/24 [==============================] - 14s 591ms/step - loss: 0.0144 - accuracy: 1.0000 - val_loss: 0.3342 - val_accuracy: 0.9114\n",
             "Epoch 25/100\n",
-            "24/24 [==============================] - 14s 584ms/step - loss: 0.0057 - accuracy: 1.0000 - val_loss: 0.4912 - val_accuracy: 0.8987\n",
+            "24/24 [==============================] - 15s 608ms/step - loss: 0.0186 - accuracy: 0.9973 - val_loss: 0.3501 - val_accuracy: 0.8987\n",
             "Epoch 26/100\n",
-            "24/24 [==============================] - ETA: 0s - loss: 0.0039 - accuracy: 1.0000Restoring model weights from the end of the best epoch: 16.\n",
-            "24/24 [==============================] - 13s 534ms/step - loss: 0.0039 - accuracy: 1.0000 - val_loss: 0.4768 - val_accuracy: 0.8987\n",
-            "Epoch 26: early stopping\n"
+            "24/24 [==============================] - 14s 589ms/step - loss: 0.0058 - accuracy: 1.0000 - val_loss: 0.3562 - val_accuracy: 0.8987\n",
+            "Epoch 27/100\n",
+            "24/24 [==============================] - ETA: 0s - loss: 0.0056 - accuracy: 1.0000Restoring model weights from the end of the best epoch: 17.\n",
+            "24/24 [==============================] - 14s 566ms/step - loss: 0.0056 - accuracy: 1.0000 - val_loss: 0.3722 - val_accuracy: 0.8987\n",
+            "Epoch 27: early stopping\n"
           ]
         }
       ]
@@ -772,24 +776,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Nx1UW2iXiYtx",
-        "outputId": "b0841e4e-d8da-43a0-b40c-1fba96685f21"
+        "outputId": "3f352aec-8928-4678-fbee-6be0afbf8a62"
       },
       "id": "Nx1UW2iXiYtx",
-      "execution_count": 36,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "3/3 [==============================] - 2s 172ms/step - loss: 4989.6494 - accuracy: 0.0380\n",
-            "xception test_accuracy = 3.8 %\n"
+            "3/3 [==============================] - 1s 173ms/step - loss: 812.7286 - accuracy: 0.0759\n",
+            "xception test_accuracy = 7.6 %\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "id": "101f61aa",
       "metadata": {
         "id": "101f61aa"
